--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,12 @@ body {
 h1 {
   font-size: 55px;
   line-height: 55px;
-  color: #000000;
+  color: black;
   font-weight: 500;
 }
 h2 {
   font-size: 24px;
   line-height: 30px;
-  color: #000000;
+  color: black;
   font-weight: 700;
 }
