Сетка для Index.html

--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,162 @@ body {
   font-weight: 400;
   font-family: Roboto;
 }
+
 h1 {
   font-size: 55px;
   line-height: 55px;
   color: black;
   font-weight: 500;
 }
+
 h2 {
   font-size: 24px;
   line-height: 30px;
   color: black;
   font-weight: 700;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.container {
+  width: 1200px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+.main-header {
+  margin-bottom: 60px;
+}
+
+/* +20px отступ сверху у features */
+
+.index-logo {
+  min-height: 114px;
+  width: 160px;
+  float: left;
+}
+
+.main-navigation {
+  min-height: 114px;
+  width: 550px;
+  float: left;
+}
+
+.user-block {
+  min-height: 114px;
+  width: 180px;
+  float: right;
+}
+
+.slider {
+  min-height: 414px;
+}
+
+.slider-content {
+  width: 560px;
+  float: left;
+}
+
+.slider-img {
+  min-width: 760px;
+  float: right;
+}
+
+/* решить вопрос с наложением/положением картинок */
+
+.features-item {
+  float: left;
+  width: 300px;
+  min-height: 350px;
+  margin-right: 100px;
+  margin-top: 20px;
+}
+
+.features-item:last-child {
+  margin-right: 0;
+}
+
+.features {
+  margin-bottom: 80px;
+}
+
+.about-us {
+  margin-bottom: 75px;
+}
+
+.index-content-left {
+  float: left;
+  width: 660px;
+  min-height: 455px;
+}
+
+.index-content-right {
+  float: right;
+  width: 360px;
+  min-height: 455px;
+}
+
+.partners {
+  padding-left: 70px;
+}
+
+.partner-1 {
+  float: left;
+  margin-right: 96px;
+}
+
+.partner-2 {
+  float: left;
+  margin-right: 105px;
+}
+
+.partner-3 {
+  float: left;
+  margin-right: 121px;
+}
+
+.partner-4 {
+  float: left;
+  margin-right: 0;
+}
+
+.main-footer {
+  margin-top: 82px;
+}
+
+.map {
+  min-height: 417px;
+  background-image: url("..img/map.jpg");
+}
+
+.adress {
+  float: left;
+  width: 318px;
+  min-height: 308px;
+  padding-top: 50px;
+}
+
+.marker {
+  float: right;
+  margin-right: 249px;
+  margin-top: 89px;
+}
+
+.social {
+  padding-top: 69px;
+  padding-bottom: 70px;
+}
+
+.footer-social {
+  float: left;
+  width: 260px;
+  margin-right: 140px;
+}
+
+.footer-frendship {
+  float: left;
 }
