--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ h2 {
 
 .main-navigation li {
   display: inline-block;
-  padding-right: 48px;
+  padding-right: 45px;
   vertical-align: top;
   font-size: 16px;
   line-height: 20px;
@@ -119,7 +119,7 @@ h2 {
 }
 
 .user-block {
-  min-height: 114px;
+  min-height: 112px;
   width: 180px;
   font-weight: 500;
   float: right;
@@ -132,7 +132,7 @@ h2 {
   display: inline-block;
   vertical-align: top;
   padding-top: 80px;
-  padding-left: 45px;
+  padding-left: 46px;
   color: black;
   text-decoration: none;
 }
@@ -149,8 +149,8 @@ h2 {
 .cart::before {
   content: "";
   position: absolute;
-  top: 85px;
-  left: 0;
+  top: 83px;
+  left: 3px;
 
   width: 18px;
   height: 18px;
@@ -162,7 +162,7 @@ h2 {
 
 .button {
   display:block;
-  margin-top: 35px;
+  margin-top: 38px;
   width: 240px;
   padding: 13px 0;
   font-size: 16px;
@@ -186,7 +186,7 @@ h2 {
 }
 
 .slider {
-  min-height: 425px;
+  min-height: 423px;
   position: relative;
   box-sizing: border-box;
   padding: 0;
@@ -200,7 +200,7 @@ h2 {
   width: 560px;
   float: left;
   padding-top: 30px;
-  padding-bottom: 80px;
+  padding-bottom: 75px;
 }
 
 .slider-content h1 {
@@ -208,21 +208,21 @@ h2 {
 }
 
 .slider-1 {
-  min-height: 430px;
+  min-height: 425px;
   background-image:url("../img/nerds-index-slide1.png");
   background-repeat:no-repeat;
   background-position: 430px 16px;
 }
 
 .slider-2 {
-  min-height: 430px;
+  min-height: 425px;
   background-image:url("../img/nerds-index-slide2.png");
   background-repeat:no-repeat;
   background-position: 100% 0;
 }
 
 .slider-3 {
-  min-height: 430px;
+  min-height: 425px;
   background-image:url("../img/nerds-index-slide3.png");
   background-repeat:no-repeat;
   background-position: 100% 20px;
@@ -276,7 +276,7 @@ h2 {
 .features {
   margin-top: 80px;
   margin-bottom: 30px;
-  padding-bottom: 80px;
+  padding-bottom: 75px;
   border-bottom: 2px solid #eeeeee;
 }
 
@@ -287,11 +287,12 @@ h2 {
 
 .features .button {
   width: 160px;
+  margin-top: 30px;
 }
 
 .features .button-green {
   display:block;
-  margin-top: 35px;
+  margin-top: 30px;
   width: 160px;
   padding: 13px 0;
   font-size: 16px;
@@ -316,7 +317,7 @@ h2 {
 
 .features .button-yellow {
   display:block;
-  margin-top: 35px;
+  margin-top: 30px;
   width: 160px;
   padding: 13px 0;
   font-size: 16px;
@@ -340,7 +341,7 @@ h2 {
 }
 
 .about-us {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .index-content-left {
@@ -353,6 +354,7 @@ h2 {
   float: right;
   width: 360px;
   min-height: 455px;
+  margin-top: 12px;
 }
 
 .index-content-title {
@@ -366,11 +368,11 @@ h2 {
 
 .index-content-left h4 {
   text-transform: uppercase;
-  margin-top: 35px;
+  margin-top: 40px;
 }
 
 .index-content-left ul {
-  margin-top: 20px;
+  margin-top: 22px;
   padding-left: 35px;
   line-height: 25px;
   margin: 0;
@@ -392,7 +394,7 @@ h2 {
   position: absolute;
   width: 25px;
   height: 2px;
-  top: 10px;
+  top: 13px;
   left: 0;
   background: white url("../img/red-line.png") no-repeat;
 }
@@ -405,6 +407,7 @@ h2 {
 
 .index-content-right ul {
   margin: 0;
+  margin-top: 22px;
   padding: 0;
   list-style-type: none;
 }
@@ -431,13 +434,18 @@ h2 {
   font-size: 26px;
 }
 
+.index-content-right p {
+  line-height: 18px;
+}
+
 .partners {
   padding-top: 45px;
   padding-bottom: 32px;
+  padding-left: 0;
   border-top: 2px solid #eeeeee;
   border-bottom: 2px solid #eeeeee;
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .partners ul {
@@ -450,17 +458,33 @@ h2 {
 .partner-logo {
   display: inline-block;
   position: relative;
-  width: 280px;
   opacity: 0.2;
   vertical-align: middle;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.partner-logo:nth-child(1) {
+  width: 200px;
+  padding-left: 18px;
+  padding-right: 50px;
 }
 
 .partner-logo:nth-child(2) {
-  width: 300px;
+  padding-left: 45px;
+  padding-right: 45px;
+  width: 209px;
 }
 
 .partner-logo:nth-child(3) {
-  width: 300px;
+  padding-left: 55px;
+  padding-right: 55px;
+  width: 185px;
+}
+
+.partner-logo:nth-child(4) {
+  width: 173px;
+  padding-left: 10px;
 }
 
 .partner-logo::after {
@@ -511,7 +535,7 @@ h2 {
 .catalog-title h1 {
   margin-top: 0;
   margin-bottom: 0;
-  padding-top: 65px;
+  padding-top: 68px;
 }
 
 .catalog {
@@ -540,7 +564,7 @@ h2 {
 }
 
 .range-controls {
-  margin-top: 45px;
+  margin-top: 47px;
   margin-bottom: 55px;
 }
 
@@ -680,7 +704,7 @@ input[type="radio"]+label:disabled::before,
   margin: 0;
   padding: 0;
   margin-top: 12px;
-  margin-bottom: 27px;
+  margin-bottom: 32px;
 }
 
 input[type="checkbox"] {
@@ -757,8 +781,16 @@ input[type="checkbox"]+label:disabled::before,
   color: #b5b5b5;
   background: #d5d5d5;
   box-shadow: inset 0 3px 0 #bfbfbf;
+  outline: none;
 }
 
+.submit:focus {
+  outline: none;
+}
+
+.submit::-moz-focus-inner {
+  border: 0;
+}
 
 .catalog-content-right {
   float: left;
@@ -771,7 +803,7 @@ input[type="checkbox"]+label:disabled::before,
   margin: 0;
   padding: 0;
   min-height: 36px;
-  margin-bottom: 40px;
+  margin-bottom: 43px;
 }
 
 .catalog-content-right .title {
@@ -809,7 +841,7 @@ input[type="checkbox"]+label:disabled::before,
 
 .sorting a {
   display: block;
-  padding-top: 10px;
+  padding-top: 8px;
   color: black;
   text-decoration: none;
 }
@@ -823,7 +855,7 @@ input[type="checkbox"]+label:disabled::before,
 }
 
 .sorting-name {
-  margin-right: 50px;
+  margin-right: 45px;
 }
 
 .sorting-up {
@@ -863,7 +895,7 @@ input[type="checkbox"]+label:disabled::before,
 
 .templates {
   min-height: 1925px;
-  margin-bottom: 20px;
+  margin-bottom: 22px;
 }
 
 .browser-bar ul {
@@ -872,13 +904,13 @@ input[type="checkbox"]+label:disabled::before,
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  height: 40px;
+  height: 42px;
   width: 360px;
   background-color: #e9e9e9;
   border-top-left-radius: 2px;
   border-top-right-radius: 2px;
-  padding-top: 12px;
-  padding-left: 12px;
+  padding-top: 15px;
+  padding-left: 15px;
 }
 
 .browser-bar li {
@@ -896,7 +928,7 @@ input[type="checkbox"]+label:disabled::before,
   position: relative;
   width: 360px;
   min-height: 616px;
-  margin-bottom: 36px;
+  margin-bottom: 30px;
 }
 
 .sedona, .barbershop, .a-plus {
@@ -999,7 +1031,7 @@ input[type="checkbox"]+label:disabled::before,
 .pag-active {
   display: inline-block;
   vertical-align: top;
-  padding: 13px 19px;
+  padding: 12px 18px;
   text-decoration: none;
   color: black;
   font-weight: 500;
@@ -1026,7 +1058,7 @@ input[type="checkbox"]+label:disabled::before,
 
 .map-markers {
   position: absolute;
-  top: 50px;
+  top: 55px;
   left: 50%;
   margin-left: -580px;
 }
@@ -1038,14 +1070,26 @@ input[type="checkbox"]+label:disabled::before,
   min-height: 310px;
   background-color: white;
   margin-right: 360px;
-  padding-top: 40px;
+  padding-top: 35px;
   padding-left: 50px;
   padding-right: 50px;
   padding-bottom: 48px;
 }
 
+.adress h3 {
+  font-size: 16px;
+  letter-spacing: 1px;
+  line-height: 30px;
+}
+
+.adress p, .tel {
+  line-height: 18px;
+  font-weight: 400;
+  color: #666666;
+}
+
 .adress .button {
-  margin-top: 30px;
+  margin-top: 35px;
   width: 220px;
 }
 
@@ -1055,24 +1099,24 @@ input[type="checkbox"]+label:disabled::before,
 }
 
 .social {
-  padding-top: 69px;
-  padding-left: 0;
+  padding-top: 67px;
+  padding-left: 14px;
   padding-bottom: 70px;
 }
 
 .footer-social {
   float: left;
   min-width: 260px;
-  margin-right: 120px;
+  margin-right: 130px;
 }
 
 .social-btn {
   position: relative;
   display: inline-block;
-  width: 80px;
-  height: 80px;
+  width: 78px;
+  height: 78px;
   border-radius: 40px;
-  margin-right: 15px;
+  margin-right: 10px;
   font-size: 0;
   vertical-align: top;
   text-decoration: none;
@@ -1147,6 +1191,7 @@ input[type="checkbox"]+label:disabled::before,
 .footer-friendship span {
   margin-top: 10px;
   display: block;
+  color: #444444;
 }
 
 .modal-write-us {
@@ -1164,7 +1209,7 @@ input[type="checkbox"]+label:disabled::before,
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.75);
   padding-left: 100px;
   padding-right: 100px;
-  padding-top: 70px;
+  padding-top: 65px;
   padding-bottom: 87px;
 }
 
@@ -1199,6 +1244,14 @@ input[type="checkbox"]+label:disabled::before,
   opacity: 0.1;
 }
 
+.modal-write-us-close:focus {
+  outline: none;
+}
+
+.modal-write-us-close::-moz-focus-inner{
+  border: 0;
+}
+
 .modal-write-us-title {
   margin: 0;
   font-size: 45px;
@@ -1207,7 +1260,7 @@ input[type="checkbox"]+label:disabled::before,
 }
 
 .write-us-form {
-  margin-top: 45px;
+  margin-top: 40px;
 }
 
 .write-us-form label {
@@ -1216,10 +1269,11 @@ input[type="checkbox"]+label:disabled::before,
   width: 360px;
 }
 
+
 .write-us-form input[type="text"], .write-us-form textarea[name="post"] {
   width: 326px;
   margin-top: 10px;
-  margin-bottom: 35px;
+  margin-bottom: 15px;
   padding: 15px 15px;
   border: #d7dcde solid 2px;
   border-radius: 2px;
@@ -1233,18 +1287,42 @@ input[type="checkbox"]+label:disabled::before,
   margin-right: 38px;
 }
 
+.write-text {
+  margin-top: 10px;
+}
+
 .write-us-form textarea[name="post"], #write-text {
   width: 726px;
   min-height: 86px;
-  margin-bottom: 47px;
+  margin-bottom: 40px;
 }
 
 .write-us-form input[type="text"]:focus {
   border: 2px solid black;
+  outline: none;
 }
 
 .write-us-form textarea[name="post"]:focus {
   border: 2px solid black;
+  outline: none;
+}
+
+.write-us-form input[type="text"]:focus::-webkit-input-placeholder {
+  color: #444444;
+}
+
+.write-us-form textarea[name="post"]:focus::-webkit-input-placeholder {
+  color: #444444;
+}
+
+.write-us-form input[type="text"]:hover {
+  border: 2px solid #b4b9bb;
+  outline: none;
+}
+
+.write-us-form textarea[name="post"]:hover {
+  border: 2px solid #b4b9bb;
+  outline: none;
 }
 
 .write-us-form span {
@@ -1280,4 +1358,13 @@ input[type="checkbox"]+label:disabled::before,
     background: #d7373b;
     box-shadow: inset 0 3px 0 #c13135;
     color: #df6e70;
+    outline: none;
   }
+
+.send-mail:focus {
+  outline: none;
+}
+
+.send-mail::-moz-focus-inner {
+  border: 0;
+}
